Integrado mapa en el tab Mapas de main (/main). Limpieza de código en profile, login, service de usuario, etc.

--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -32,9 +32,9 @@
           <ion-label>Torneos</ion-label>
         </ion-tab-button>
     
-        <ion-tab-button tab="mapa">
+        <ion-tab-button tab="mapas">
           <ion-icon name="map"></ion-icon>
-          <ion-label>Mapa</ion-label>
+          <ion-label>Mapas</ion-label>
         </ion-tab-button>
 
       </ion-tab-bar>
