--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,17 +1,18 @@
 .card{
     height: 300px;
     margin-top: auto;
-    margin-bottom: auto;
-    width: 370px;
-    background-color: rgba(0, 0, 0, 0.603) !important;
-    align-items: center;
-    
-    }
-
-.card-header h3{
-    color: white;
+    margin-bottom: auto; 
+     width: 370px; 
+     background-color: rgba(0, 0, 0, 0.603) !important;
+    align-items: center; 
     
 }
+
+.card-header h3{
+    color: red;
+    text-align: center;
+    
+}  
 
 
 /* img{
@@ -49,8 +50,9 @@ width: 250px;
 ion-avatar{
     width: 200px;
     height: 200px;
+    margin-top: 0px;
 }
-ion-card-header{
+ ion-card-header{
     text-align: center;
     background-color:#1E8FD5;
 }
@@ -63,13 +65,14 @@ ion-avatar{
 }
 ion-card-content{
     background-color: white;
-}
-ion-item{
-    margin-top:15px;
-    margin-left:30px;
-    margin-right: 30px;
-    margin-bottom: 15px;
 } 
-ion-card{
-  width: 800px;
-}
+/*ion-item{
+    margin-top:0px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 0px;
+}*/
+
+/* ion-card{
+  width: 100%;
+} */
