--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -157,7 +157,9 @@
 
           </ion-list>
             <div>
-              <ion-button color="tertiary" size="large" type="submit" [disabled]="registerForm.invalid">REGISTRARME</ion-button>
+              <ion-row class="ion-justify-content-center">
+                <ion-button color="tertiary" size="large" type="submit" [disabled]="registerForm.invalid" fill="outline">REGISTRAR</ion-button>
+              </ion-row>
             </div>
           </ion-col>
         </ion-row>
