--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -61,6 +61,12 @@
                 </label>
               </ion-item>
 
+              <ion-item>
+                <label>
+                  Aquí irá el punto {{localperfil.punto.coordinates[0]}} {{localperfil.punto.coordinates[1]}} del Usuario en el Mapa
+                </label>
+              </ion-item>
+
               <!-- <ion-item>
                 <label>
                   Torneos: {{localperfil.torneos}}
