--- a/src/app/pages/main-tabs/torneos/torneos.page.html
+++ b/src/app/pages/main-tabs/torneos/torneos.page.html
@@ -33,7 +33,8 @@
             <ion-item lines="none">
               <ion-checkbox color="primary" slot="start" [(ngModel)]="listaTorneosFlags[0]" [ngModelOptions]="{standalone: true}"></ion-checkbox>
               <ion-col><ion-label>Ubicación:</ion-label></ion-col>
-
+              <ion-col>Aquí irá el Mapa</ion-col>
+              <ion-col><ion-input type="number" min="0" formControlName="radio"></ion-input></ion-col>
             </ion-item>
 
             <!--ion-item lines="none">
