--- a/src/app/pages/main-tabs/usuarios/usuarios.page.html
+++ b/src/app/pages/main-tabs/usuarios/usuarios.page.html
@@ -29,7 +29,8 @@
             <ion-item lines="none">
               <ion-checkbox color="primary" slot="start" [(ngModel)]="listaUsuariosFlags[1]" [ngModelOptions]="{standalone: true}"></ion-checkbox>
               <ion-col><ion-label>Ubicación:</ion-label></ion-col>
-                
+              <ion-col>Aquí irá el Mapa</ion-col>
+              <ion-col><ion-input type="number" min="0" formControlName="radio"></ion-input></ion-col>
             </ion-item>
 
             <ion-item lines="none">
