--- a/src/app/pages/main-tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/main-tabs/dashboard/dashboard.page.html
@@ -5,7 +5,7 @@
         <ion-card-title class="ion-text-center">
           <ion-chip color="primary">
             <ion-avatar>
-              <img [src]="'http://localhost:7000/'+usuarioLogueado.rutaimagen">
+              <img [src]="path+usuarioLogueado.rutaimagen">
             </ion-avatar>
             <ion-label>{{usuarioLogueado.username}}</ion-label>
           </ion-chip>
