--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -21,7 +21,7 @@
             <ion-card-content>
               <ion-item>
                 <ion-avatar>
-                    <ion-img [src]="'http://localhost:7000/'+ localperfil.rutaimagen"></ion-img>
+                    <ion-img [src]="path+ localperfil.rutaimagen"></ion-img>
                 </ion-avatar>
               </ion-item>
 
